--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -72,7 +72,13 @@ jobs:
 
     - name: Run Testsuite
       run: vendor/bin/phpunit tests/
-
+      
+    - name: configure aws
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ap-northeast-1
     # Example: Deploy to Laravel Forge
     # - name: Deploy to Laravel Forge
     #   run: curl ${{ secrets.FORGE_STAGING_WEBHOOK }}
